fixing text center of readmore view mobile , align text to right in view moble

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -385,6 +385,9 @@
 /* Tablet
 ------------------------- */
 @media (max-width: 767px) {
+	.pul-right-mobile{
+		float: right;
+	}
 	a[data-icon]{
 		width: 40px;
 		height: 40px;
