--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2132,6 +2132,12 @@ ol.linenums {
 .text-center-mobile{
 	float: none;
 	text-align: center;
+	&.pull-left{
+		float: none;
+	}
+	&.pull-right{
+		float: none;
+	}
 }
 .thumbnail{
 	background-color: @white;
